--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -12,6 +12,7 @@ jobs:
     - name: repo-dispatch
       uses: peter-evans/repository-dispatch@v4
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         repository: fabio-teichmann/ple-1-internal-dev-platform-mini
         event-type: template-init
-        client-payload: '{"ref": "${{ github.ref }}"}'
+        client-payload: '{"ref": "${{ github.ref }}", "repo": "${{ github.repository }}"}'
