--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -4,7 +4,7 @@ on: create
 
 jobs:
   build:
-    if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
