--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -13,7 +13,7 @@ jobs:
     - name: repo-dispatch
       uses: peter-evans/repository-dispatch@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT }}
         repository: fabio-teichmann/ple-1-internal-dev-platform-mini
         event-type: template-init
         client-payload: '{"ref": "${{ github.ref }}", "repo": "${{ github.repository }}"}'
