--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -7,15 +7,17 @@ jobs:
   build:
     # if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
-    permissions:
-      actions: write
+    # permissions are repo-scoped and won't suffice for the repository_dispatch flow
+    # permissions:
+    #   actions: write
     steps:
     - uses: actions/checkout@v4
 
     - name: repo-dispatch
       uses: peter-evans/repository-dispatch@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        # org-level access token
+        token: ${{ secrets.PAT }}
         repository: fabio-teichmann/ple-1-internal-dev-platform-mini
         event-type: template-init
         client-payload: '{"ref": "${{ github.ref }}", "repo": "${{ github.repository }}"}'
